--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<h1> ChatApp</h1>
 			</header>
 			<main class="join-main">
-				<form action="chat.html">
+				<form action="/chat.html">
 					<div class="form-control">
 						<label for="username">Username</label>
 						<input
